--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,12 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
+    "paths": {
+      "preview-gallery": [
+        "dist/preview-gallery/preview-gallery",
+        "dist/preview-gallery"
+      ]
+    },
     "target": "es2017",
     "module": "es2020",
     "lib": [
