--- a/angular.json
+++ b/angular.json
@@ -99,9 +99,41 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
             "scripts": []
+          }
+        }
+      }
+    },
+    "preview-gallery": {
+      "projectType": "library",
+      "root": "projects/preview-gallery",
+      "sourceRoot": "projects/preview-gallery/src",
+      "prefix": "ngx",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/preview-gallery/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/preview-gallery/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/preview-gallery/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/preview-gallery/src/test.ts",
+            "tsConfig": "projects/preview-gallery/tsconfig.spec.json",
+            "karmaConfig": "projects/preview-gallery/karma.conf.js"
           }
         }
       }
